nginx-ingress/service-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloweb #GKE needs ClusterIp
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb
  namespace: default
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
